k8s-apps/blog-kgb33-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-kgb33-dev
  labels:
    app: blog-kgb33-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-kgb33-dev
  template:
    metadata:
      labels:
        app: blog-kgb33-dev
    spec:
      containers:
      - image: ghcr.io/kgb33/blog.kgb33.dev:latest
        name: blog-kgb33-dev
        ports:
        - containerPort: 1313
