k8s-apps/blog-kgb33-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-kgb33-dev
  labels:
    app: blog-kgb33-dev
spec:
  ports:
  - port: 1313
  selector:
    app: blog-kgb33-dev
